--- a/templates/allauth/account/account_inactive.html
+++ b/templates/allauth/account/account_inactive.html
@@ -1,3 +1,5 @@
+
+
 {% extends "account/base.html" %}
 
 {% load i18n %}
@@ -6,7 +8,7 @@
 
 {% block inner_content %}
 <hr>
-<h2 class="logo-font-mb-4">{% trans "Account Inactive" %}</h2>
+<h2 class="logo-font mb-4">{% trans "Account Inactive" %}</h2>
 <hr>
 
 <p>{% trans "This account is inactive." %}</p>
