--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -6,9 +6,11 @@
 {% block head_title %}{% trans "Sign In" %}{% endblock %}
 
 {% block inner_content %}
+
 <hr>
-<h2 class="logo-font-mb-4">{% trans "Sign In" %}</h2>
+<h2 class="logo-font mb-4">{% trans "Sign In" %}</h2>
 <hr>
+
 {% get_providers as socialaccount_providers %}
 
 {% if socialaccount_providers %}
@@ -41,7 +43,7 @@ for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
   {% endif %}
   <a class="btn btn-outline-black rounded-0" href="{% url 'home' %}">Home</a>
   <button class="primaryAction" type="submit">{% trans "Sign In" %}</button>
-  <p class="mt-2"></p>
+  <p class="mt-2">
     <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
   </p>
 </form>
