--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,6 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
         <!-- Stripe -->
         <script src="https://js.stripe.com/v3/"></script>
-
     {% endblock %}
 
     {% block extra_js %}
@@ -73,7 +72,7 @@
                                 {% if request.user.is_superuser %}
                                     <a href="" class="dropdown-item">Product Management</a>
                                 {% endif %}
-                                <a href="" class="dropdown-item">My Profile</a>
+                                <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
                                 <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
                             {% else %}
                                 <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
@@ -116,8 +115,8 @@
 
     {% if messages %}
         <div class="message-container">
-        {% for message in messages %}
-        {% with message.level as level %}
+            {% for message in messages %}
+                {% with message.level as level %}
                     {% if level == 40 %}
                         {% include 'includes/toasts/toast_error.html' %}
                     {% elif level == 30 %}
@@ -127,9 +126,9 @@
                     {% else %}
                         {% include 'includes/toasts/toast_info.html' %}
                     {% endif %}
-            {% endwith %}
-        {% endfor %}
-    </div>
+                {% endwith %}
+            {% endfor %}
+        </div>
     {% endif %}
 
     {% block page_header %}
